--- a/.github/workflows/pipy_release.yml
+++ b/.github/workflows/pipy_release.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install pypa/setuptools
       run: >-
         python -m
-        pip install wheel
+        pip install wheel setuptools
     - name: Extract tag name
       id: tag
       run: echo ::set-output name=TAG_NAME::$(echo $GITHUB_REF | cut -d / -f 3)
